--- a/index.html
+++ b/index.html
@@ -39,6 +39,16 @@
             box-shadow: 0px 1px 1px 1px #5b595a;
             /* background-image: -webkit-linear-gradient(top,#b1b1b1,#d7d7d7); */
         }
+        input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
         .txt{
             font-size: 1em !important;
             text-align: left !important;
